--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         }
 
         .parallax-container {
-            height: 25vh;
+            height: 30vh;
         }
+
+
     </style>
 
     <!-- Coneectando ao js do rellax js -->
@@ -36,37 +38,30 @@
         <nav>
             <div class="nav-wrapper indigo darken-4">
                 <div class="container">
-                    <a href="#!" class="brand-logo">LM</a>
+                    <a href="#!" class="brand-logo">Lucas M.</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger">
                         <span class="fa fa-bars"></span>
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li>
-                            <a href="#!">Music
-                                <i class="fa fa-music"></i>
+                            <a href="#about-me" class="waves-effect waves-light">About
+                                    <i style="font-size:30px" class="fa fa-user"></i>
+
                             </a>
                         </li>
                         <li>
-                            <a href="#!">Sports
-                                <i class="fa fa-bicycle"></i>
+                            <a href="https://www.linkedin.com/in/lucas-manoel-67bb8314b/" target="_blank" class="waves-effect waves-light">LinkedIn <i style="font-size:30px" class="fab fa-linkedin"></i>
+                                <span class="ion-social-linkedin"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="#!">Plants
-                                <i class="fa fa-cannabis"></i>
+                            <a href="https://github.com/lucaslmmanoel" target="_blank" class="waves-effect waves-light">GitHub <i style="font-size:30px" class="fab fa-github"></i>
+                                <span class="ion-social-github"></span>
                             </a>
                         </li>
-                        <li>
-                            <a href="#!">Tech Life
-                                <i class="fa fa-code"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#!">About me
-                                <i class="fa fa-user"></i>
-                            </a>
-                        </li>
+
                     </ul>
+
                 </div>
             </div>
         </nav>
@@ -88,33 +83,33 @@
                     <span class="email white-text">
                         <span class="fa fa-envelope"></span> lucaslmmanoel5@gmail.com</span>
                 </a>
+                <a href="#email">
+                    <span class="email white-text">
+                        <span class="fa fa-map-marker-alt"></span> Brasilia, Brazil</span>
+                </a>
+                <a href="#email">
+                    <span class="email white-text">
+                        <span class="fa fa-phone"></span> +55 (61) 9 9614-2426</span>
+                </a>
             </div>
         </li>
         <li>
-            <a href="#!">Music
-                <i class="fa fa-music"></i>
+            <a href="#about-me" class="waves-effect waves-light">About <i style="font-size:30px" class="fa fa-user"></i>
+
+            </a>
+        </li>
+
+        <li>
+            <a href="https://www.linkedin.com/in/lucas-manoel-67bb8314b/" target="_blank" class="waves-effect waves-light">LinkedIn <i style="font-size:30px" class="fab fa-linkedin"></i>
+                <span class="ion-social-linkedin"></span>
             </a>
         </li>
         <li>
-            <a href="#!">Sports
-                <i class="fa fa-bicycle"></i>
+            <a href="https://github.com/lucaslmmanoel" target="_blank" class="waves-effect waves-light">GitHub <i style="font-size:30px" class="fab fa-github"></i>
+                <span class="ion-social-github"></span>
             </a>
         </li>
-        <li>
-            <a href="#!">Plants
-                <i class="fa fa-cannabis"></i>
-            </a>
-        </li>
-        <li>
-            <a href="#!">Tech Life
-                <i class="fa fa-code"></i>
-            </a>
-        </li>
-        <li>
-            <a href="#!">About me
-                <i class="fa fa-user"></i>
-            </a>
-        </li>
+
     </ul>
     <!-- End navbar -->
     <div class="parallax-container" style="margin-top: 0%">
@@ -128,91 +123,99 @@
             <h2 class="white-text">
                 <b>Welcome to my WebSite</b>
             </h2>
-            <p class="flow-text white-text">My name is Lucas Manoel, i am a art lover and web developer!
-                <br> I like to share a lot of cool content, and here i have a lot!!!
-                <br> Click on Arrow to see more about
+            <p class="flow-text white-text">My name is Lucas Manoel, web and mobile developer!
+                <br> I am learning how to be a Full stack Dev, focused on UX and security
+
             </p>
-
-            <div class="fixed">
-                <a href="#arrow">
-                    <i class="material-icons large indigo darken-4 z-depth-5">arrow_downward</i>
-                </a>
-            </div>
-
-        </div>
-
-
-        <div class="rellax" data-rellax-speed="6">
-            <img src="./resources/imgs/1.png" width="100%" />
-            <div class="container">
-                <div class="rellax" id="arrow" data-rellax-speed="8">
-                    <img src="./resources/imgs/2.png" width="100%" />
-                    <div class="rellax" data-rellax-speed="1">
-                        <div class="col s8 m8 l8">
-                            <img src="MSG.png" width="150%" />
-                        </div>
-                    </div>
-                    <div id="arrow" class="col s12" style="margin-top: 0%">
-                        <div class="carousel center-align">
-                            <a href="#!" class="carousel-item">
-                                <img class="z-depth-4" src="./resources/imgs/start.jpg">
-                                <button class="btn blue" style="margin-top: 0%">teste</button>
-                            </a>
-                            <a href="#!" class="carousel-item">
-                                <img class="responsive-img" src="./resources/imgs/start.jpg">
-                            </a>
-                            <a href="#!" class="carousel-item">
-                                <img class="responsive-img" src="./resources/imgs/start.jpg">
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="rellax" data-rellax-speed="2">
-                    <img src="./resources/imgs/2.png" width="90%" />
-                    <div style="margin-top: 10%" class="container-fluid">
-                        <div class="rellax d1">
-                            <img src="./resources/imgs/1.png" width="70%" />
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <br>
-        <!-- Talking about the contents -->
-
-        <div class="row">
-            <div class="col s12 m12 l12">
-                <h1>content</h1>
-                <div class="card purple darken-4">
-                    <div class="card-content white-text">
-                        <span class="card-title">Music</span>
-                        <p> Run, rabbit run Dig that hole, forget the sun And when at last the work is done Don't sit down, it's
-                            time to dig another one !!!
-                        </p>
-                    </div>
-                    <div class="card-action white-text right-align">
-                        Pink Floyd - Breathe
-                    </div>
-                </div>
-                <div class="card purple darken-4">
-                    <div class="card-content white-text">
-                        <span class="card-title">Inspiration</span>
-                        <p> Run, rabbit run Dig that hole, forget the sun And when at last the work is done Don't sit down, it's
-                            time to dig another one !!!
-                        </p>
-                    </div>
-                    <div class="card-action white-text right-align">
-                        Pink Floyd - Breathe
-                    </div>
-                </div>
-            </div>
+            <a href="#about-me" class="fa fa-arrow-down white-text" style="font-size:40px"> </a>
         </div>
     </div>
-    <!-- End container -->
 
+    <div id="about-me" class="container scrollspy">
+        <div class="col s12 m4 white-text">
+            <div class="icon-block">
+                <h2 class="center white-text">
+                    <i class="fa fa-code"></i>
+                </h2>
+                <h5 class="center">Web and Mobile aplications Development</h5>
+
+                <p class="light flow-text center-align">
+                    I develop web aplications, and native apps using some frameworks, Development of systems to me is awesome
+                    <i class="fa fa-heart"></i>
+                </p>
+            </div>
+        </div>
+        <div class="section">
+            <!--   Icon Section   -->
+            <div class="row  white-text">
+                <div class="col s12 m4 l4 offset-l2">
+                    <div class="icon-block">
+                        <h2 class="center  white-text">
+                            <i class="fab fa-python"></i>
+                            <i class="fab fa-php"></i>
+                        </h2>
+                        <h5 class="center">Skills</h5>
+                        <p class="light flow-text center-align">
+                            I like to work with Python, is my passion, i have been using him to work with data, games, and web Development! I develop
+                            in other languages,  web stuff like html  <i class="fab fa-html5"></i> , css <i class="fab fa-css3-alt"></i> , js <i class="fab fa-js"></i>. If i am not
+                            using python i like to use PHP too!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center secondary-text-color">
+                            <i class="fa fa-project-diagram"></i>
+                        </h2>
+                        <h5 class="center">Analisys of systems</h5>
+                        <p class="light flow-text center-align">
+                            The most important not is to do, is how it is done, for this i am praticing and learning every day, how to be a good Analist
+                            using the software engineering, and frameworks that can  help me, like the modeling structures, detailed planning!
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="parallax-container balign-wrapper" style="height: 60vh;">
+        <div class="section no-pad-bot">
+            <div class="container">
+                <div class="row white-text">
+                </div>
+            </div>
+        </div>
+        <div class="parallax">
+            <img src="./resources/imgs/me.jpg" alt="Unsplashed background img 2">
+        </div>
+    </div>
+    
+
+    <footer class="page-footer indigo darken-4">
+            <div class="container">
+              <div class="row">
+                <div class="col l6 s12">
+                  <h5 class="white-text center-align">Lucas Manoel</h5>
+                  <p class="grey-text text-lighten-4 center-align">If you want to know more about me, check at the links my jobs and part of my life!!!</p>
+                </div>
+                <div class="col l4 offset-l2 s12 center-align">
+                  <h5 class="white-text">Links</h5>
+                  <ul>
+                    <li><a class="grey-text text-lighten-3" href="https://github.com/lucaslmmanoel" target="_blank">GitHub <i style="font-size:30px" class="fab fa-github"></i> </a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/lucas-manoel-67bb8314b/" target="_blank"> LinkedIn  <i style="font-size:30px" class="fab fa-linkedin"></i> </a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/worldpsych/" target="_blank">Instagram <i style="font-size:30px" class="fab fa-instagram"></i> </a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://twitter.com/lucaslmmanoel" target="_blank"> Twitter <i style="font-size:30px" class="fab fa-twitter"></i> </a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="footer-copyright center-align">
+              <div class="container">
+              © 2018 Lucas Manoel
+              </div>
+            </div>
+          </footer>
     <!-- sccrollspy script -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -262,4 +265,4 @@
     <script src="./resources/js/materialize.min.js"></script>
 </body>
 
-</html>0
+</html>
